welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: ')' expected but ';' found.
def move(Nbpas:int;versLavant: Boolean){
                  ^Program:2: error: ';' expected but ')' found.
def move(Nbpas:int;versLavant: Boolean){
                                      ^